# azure-sdk-for-rust

./: .waza.yaml  AGENTS.md  Cargo.toml
.github/skills/new-sdk-client/: SKILL.md
.github/skills/new-sdk-client/references/: test-patterns.md
.github/skills/update-emitter/: SKILL.md
eng/: emitter-package.json
sdk/core/azure_core/src/: lib.rs
sdk/core/azure_core/src/http/: pipeline.rs
sdk/core/azure_core_amqp/: Cargo.toml
sdk/core/azure_core_amqp/src/: cbs.rs  connection.rs  lib.rs  management.rs  messaging.rs  noop.rs  receiver.rs  sender.rs  session.rs  value.rs
sdk/core/azure_core_amqp/src/fe2o3/: receiver.rs  session.rs
sdk/core/azure_core_amqp/src/mock/: cbs.rs  connection.rs  delivery.rs  management.rs  mod.rs  receiver.rs  sender.rs  session.rs
sdk/core/azure_core_test_macros/src/: test.rs
sdk/core/azure_core_tracing/: CHANGELOG.md  Cargo.toml
sdk/core/azure_core_tracing/src/: attributes.rs  lib.rs  provider.rs  span.rs  tracer.rs
sdk/core/azure_core_tracing/tests/: otel_span_tests.rs
sdk/core/azure_core_tracing_opentelemetry/: Cargo.toml
sdk/core/azure_core_tracing_opentelemetry/examples/: basic_usage.rs
sdk/core/azure_core_tracing_opentelemetry/src/: attributes.rs  conversion.rs  lib.rs  span.rs  telemetry.rs  tracer.rs
sdk/core/azure_core_tracing_opentelemetry/tests/: integration_test.rs
sdk/eventhubs/: .dict.txt
sdk/eventhubs/azure_messaging_eventhubs/: Cargo.toml  test-resources.bicep
sdk/eventhubs/azure_messaging_eventhubs/benches/: benchmarks.rs
sdk/eventhubs/azure_messaging_eventhubs/examples/: eventhubs_batch_produce_events.rs  eventhubs_consume_events.rs  eventhubs_consume_messages.rs  eventhubs_partition_properties.rs  eventhubs_produce_events.rs  eventhubs_produce_messages.rs  eventhubs_properties.rs
sdk/eventhubs/azure_messaging_eventhubs/src/: lib.rs
sdk/eventhubs/azure_messaging_eventhubs/src/common/: connection_manager.rs
sdk/eventhubs/azure_messaging_eventhubs/src/consumer/: mod.rs
sdk/eventhubs/azure_messaging_eventhubs/tests/: consumer.rs  producer.rs
sdk/messaging_eventhubs/: Cargo.toml
sdk/messaging_eventhubs/examples/: eventhubs_partition_properties.rs  eventhubs_properties.rs
sdk/messaging_eventhubs/src/: lib.rs
sdk/messaging_eventhubs/src/amqp_client/: cbs.rs  connection.rs  error.rs  management.rs  messaging.rs  mod.rs  noop.rs  sender.rs  session.rs  value.rs
sdk/messaging_eventhubs/src/amqp_client/fe2o3/: cbs.rs  connection.rs  error.rs  management.rs  messaging.rs  mod.rs  sender.rs  session.rs  value.rs
sdk/messaging_eventhubs/src/consumer/: mod.rs
sdk/messaging_eventhubs/src/producer/: batch.rs  mod.rs
sdk/messaging_eventhubs/tests/: producer.rs
sdk/messaging_eventhubs/tests/common/: mod.rs
sdk/typespec/typespec_client_core/src/tracing/: mod.rs  (+1 more)
tests/evals/update-emitter/: eval.yaml
tests/evals/update-emitter/tasks/: basic-usage.yaml  should-not-trigger.yaml
(+9 files in other folders)
