[package]
name = "azure_messaging_eventhubs"
version = "0.20.0"
description = "Rust client for Azure Eventhubs Service"
readme = "README.md"
authors = ["Microsoft Corp."]
license = "MIT"
repository = "https://github.com/azure/azure-sdk-for-rust"
homepage = "https://github.com/azure/azure-sdk-for-rust"
documentation = "https://docs.rs/azure_messaging_eventhubs"

keywords = ["sdk", "azure", "rest", "iot", "cloud"]
categories = ["api-bindings"]

edition = "2021"

[dependencies]
azure_core = { path = "../core", version = "0.20" }
time = { version = "0.3.10", features = ["serde-well-known"] }
tracing = "0.1.40"
url = "2.2"
bytes = "1.0"
serde = "1.0"
async-trait = "*"
fe2o3-amqp = { version = "0.10.0", features = [
  "rustls",
  "log",
], optional = true }
fe2o3-amqp-ext = { version = "0.10.0", features = [], optional = true }
fe2o3-amqp-types = { version = "0.10.0", optional = true }
fe2o3-amqp-management = { version = "0.10.0", optional = true }
fe2o3-amqp-cbs = { version = "0.10.0", optional = true }
serde_amqp = { version = "0.10.0", optional = true }
uuid = { version = "1.8", optional = true }
tokio = { version = "1.0", features = [
  "macros",
  "rt-multi-thread",
  "net",
  "rt",
], optional = true }

[build-dependencies]
rustc_version = "0.4"

[dev-dependencies]
futures = "0.3"
azure_identity = { path = "../identity", version = "0.20" }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = "0.3"
env_logger = "0.8"
lazy_static = { version = "1.4" }

[features]
default = ["enable-fe2o3-amqp"]
enable-fe2o3-amqp = [
  "fe2o3-amqp",
  "fe2o3-amqp-types",
  "fe2o3-amqp-ext",
  "fe2o3-amqp-management",
  "fe2o3-amqp-cbs",
  "serde_amqp",
  "uuid",
  "tokio",
]
test_e2e = []

[package.metadata.docs.rs]
features = ["enable-fe2o3-amqp"]
