[package]
name = "azure_core_tracing"
version = "0.2.0"
description = "Distributed Tracing integration for the Tracing package for the Azure SDK for Rust"
readme = "README.md"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage = "https://github.com/azure/azure-sdk-for-rust"
documentation = "https://docs.rs/azure_core_opentelemetry"
keywords = ["sdk", "azure", "tracing", "observability"]
categories = ["api-bindings", "development-tools::debugging"]
edition.workspace = true
rust-version.workspace = true

[dependencies]
azure_core.workspace = true
reqwest.workspace = true
tracing.workspace = true
typespec_client_core.workspace = true

[dev-dependencies]
azure_core_test = { workspace = true, features = ["tracing"] }
azure_core_test_macros.workspace = true
azure_identity.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
url.workspace = true

[lints]
workspace = true
